# soccer_analysis

./: .gitignore  Dockerfile  app.py  clean_job.py  etl.sh  pyproject.toml  requirements.txt  testing.ipynb
2017_onward/: 2017_2018.csv  2019_2020.csv  2020_2021.csv  2021_2022.csv  2022_2023.csv  2023_2024.csv
etl/: clean.py  clean_job.py  extract.py  ingest.py  load.py  transform.py
etl/2017_onward/: 2018_2019.csv  2024_2025.csv
etl/data/: 2018_2019.csv  2019_2020.csv  2020_2021.csv  2023_2024.csv  2024_2025.csv  gca_2018_2019.csv  gca_2019_2020.csv  gca_2020_2021.csv  gca_2022_2023.csv  gca_2023_2024.csv  possession_2017_2018.csv  possession_2018_2019.csv  possession_2019_2020.csv  possession_2022_2023.csv  possession_2023_2024.csv  possession_2024_2025.csv
etl/ingestion/: 2017_2018.csv  2022_2023.csv  README.md  gca_2021_2022.csv
etl/ingestion_data/: 2021_2022.csv  gca_2017_2018.csv  gca_2024_2025.csv  possession_2020_2021.csv  possession_2021_2022.csv
etl/serving/: efficient_attackers.csv
etl/staging/: 2017_2018_cleaned.csv  2018_2019_cleaned.csv  2020_2021_cleaned.csv  2024_2025_cleaned.csv  README.md  gca_2019_2020_cleaned.csv  gca_2020_2021_cleaned.csv  gca_2022_2023_cleaned.csv  gca_2024_2025_cleaned.csv  possession_2018_2019_cleaned.csv  possession_2020_2021_cleaned.csv  possession_2021_2022_cleaned.csv  possession_2022_2023_cleaned.csv  possession_2023_2024_cleaned.csv  possession_2024_2025_cleaned.csv
etl/staging_data/: 2019_2020_cleaned.csv  2021_2022_cleaned.csv  2022_2023_cleaned.csv  2023_2024_cleaned.csv  gca_2017_2018_cleaned.csv  gca_2018_2019_cleaned.csv  gca_2021_2022_cleaned.csv  gca_2023_2024_cleaned.csv  possession_2017_2018_cleaned.csv  possession_2019_2020_cleaned.csv
mcp/: concept_researcher_server.py  data_analyst_server.py  data_schema_researcher_server.py  sqlite_manager.py
src/: agent.py  agents.py  prompts.py  prompts_template.py  schemas.py  utils.py  workflow.py
src/mcp/: data_analyst_server.py  resources.py  sqlite_manager_server.py  visualizer_server.py
